--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: main
+  branch: main   # matches your GitHub default branch
 
 media_folder: "static/uploads"
 public_folder: "/uploads"
